Fixed Java 11 collect method