@@ -20,6 +20,7 @@ import infrastructure.metrics.QualityMetrics;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
+import java.util.stream.Collectors;
 
 public class ClassVisitor extends VoidVisitorAdapter<Void> {
 
@@ -424,7 +425,7 @@ public class ClassVisitor extends VoidVisitorAdapter<Void> {
                             return null;
                         }
                     })
-                    .toList();
+                    .collect(Collectors.toList());
         } catch (Throwable t) {
             return 0.0F;
         }
